* type=appid-toolbox | introduction of new type | integrate appid migration run directly by using pan-os-php alias
* type=xpath | change all filter argument to start with "filter-"
* type=appid-toolbox | introduce additional arguments to better use in bash autocompletion script |p1-marker|p2-generator|p3-cloner|p5-activation|p6-cleaner

BUGFIX:
* Dockerfiles | update
* type=device | fix object count for utilities
* type=vendor-migration vendor=ciscoasa | bugfix during original config storing
* class CONVERTER.php | bugfix for bidirNAT adjustment

GENERAL:
* class ServiceStore | loop detection - reduce mwarning output to a single finding per $groupName
* update bash_autocompletion/pan-os-php.sh
* introduce develop script cyclePanroama_ssh.php
* bash_autocompletion | class MAXMIND | class SSH_CONNECTOR - small adjustments
* develop start sonicwall.php EXP exported config migration


2.1.1 (20230419)
UTIL:

BUGFIX:
* Dockerfile update to get everything working with new type=vendor-migration
* class Rule.php - fix for PHP7

GENERAL:


2.1.0  (20230419)
UTIL:
* type=vendor-migration | introduce 3rd party Firewall configuration migration to PANOS XML config file
* type=vendor-migration | vendor=stonesoft - extend validation output
* type=register-ip | extend usage for Panorama registered-ip
* type=rule | actions=exporttoexcel - extend help information for applicationsee and hitcount
* type=xpath | introduce argument display-xmlLineNo

BUGFIX:
* class Snippet | bugfix add DataFilteringProfileStore
* type=address-merger | avoid error out on not yet supported classes Ethernet/TunnelInterface
* class Tag.php | bugfix for PHP 7

GENERAL:
* dockerfile update to ubuntu22 and php8.1
* general | introduce argument 'shadow-displayxmlnode'
* general | extend utilities for Fawkes/Buckbeak Snippets
* remove backtrace from mwarning - mostly related to Fawkes/Buckbeak Snippet config


2.0.75 (20230412)
UTIL: